tests/ui/parser/attribute/attr-with-a-semicolon.rs
#[derive(Debug, Clone)]; //~ERROR expected item after attributes
struct Foo;

fn main() {}
